# agentfs

./: CHANGELOG.md  FORKSTATE-GUIDE.md  MANUAL.md  README.md  install.sh
.claude/commands/: generate-py-sdk.md
.github/workflows/: release.yml  typescript.yml
cli/: Cargo.toml
cli/src/: fuse.rs  main.rs  nfs.rs  parser.rs
cli/src/cmd/: fs.rs  init.rs  mod.rs  mount.rs  nfs.rs  run.rs  run_darwin.rs  run_stub.rs
cli/src/mount/: fuse.rs
cli/src/nfsserve/: nfs_handlers.rs
cli/src/sandbox/: linux.rs  mod.rs  overlay.rs
cli/tests/: all.sh  test-syscalls.sh
cli/tests/syscall/: main.c  test-common.h
sandbox/: Cargo.toml
sandbox/src/syscall/: mod.rs
sandbox/src/vfs/: sqlite.rs
scripts/: release-local.sh  release.sh
sdk/go/: agentfs.go  agentfs_test.go  filesystem.go  schema.go  types.go
sdk/python/: IMPLEMENTATION_NOTES.md  QUICKSTART.md  README.md  pyproject.toml
sdk/python/agentfs/: agentfs.py  filesystem.py  kvstore.py  toolcalls.py
sdk/python/agentfs_sdk/: __init__.py
sdk/python/examples/: filesystem_demo.py  kvstore_demo.py  toolcalls_demo.py
sdk/python/tests/: test_basic.py
sdk/rust/: Cargo.toml
sdk/rust/src/: connection_pool.rs  error.rs  lib.rs
sdk/rust/src/filesystem/: agentfs.rs  hostfs.rs  hostfs_darwin.rs  hostfs_linux.rs  mod.rs  overlayfs.rs
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: filesystem.ts  guards.ts  index.ts  kvstore.ts  toolcalls.ts
sdk/typescript/src/integrations/just-bash/: AgentFs.ts
sdk/typescript/src/integrations/ooss/: convex-streamer.ts  index.ts  metadata.ts  overlay.ts  permission-hooks.ts  protected-fs.ts  types.ts
sdk/typescript/tests/: filesystem.test.ts  kvstore.test.ts  ooss-integration.test.ts
