[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfs"
version = "0.3.0"
description = "AgentFS Python SDK - A filesystem and key-value store for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["ai", "agent", "turso", "sqlite", "key-value", "filesystem"]
authors = [
    {name = "Turso", email = "support@turso.tech"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyturso==0.4.0rc16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/tursodatabase/agentfs"
Documentation = "https://github.com/tursodatabase/agentfs/tree/main/sdk/python"
Repository = "https://github.com/tursodatabase/agentfs"
Issues = "https://github.com/tursodatabase/agentfs/issues"

[tool.setuptools.packages.find]
include = ["agentfs*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
