[package]
name = "agentfs-sdk"
version = "0.4.0-pre.1"
edition = "2021"
description = "AgentFS SDK for Rust"
license = "MIT"

[dependencies]
turso = "0.4.0-pre.17"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "overlayfs"
harness = false

[profile.bench]
debug = true
